# ogl-engine

./: CMakeLists.txt  README.md
include/: camera.hpp  engine.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  ogle.hpp  pch.hpp  program.hpp  scene.hpp  sence.hpp  skybox.hpp  text.hpp  texture.hpp  utils.hpp
include/glad/: glad.h
resources/models/: jennifer  morak
resources/models/sphere/: sphere.mtl
resources/shaders/: anim.frag  anim.vert  build.sh  phong.frag  phong.vert  simple.frag  simple.vert  skinned.frag  skinned.vert  skybox.frag  skybox.vert  vertex.vert
resources/shaders/lighting/: simple.vert
resources/shaders/spirv/: fragment.spv  fs_skinned.spv  fs_skybox.spv  vertex.spv  vs_simple.spv  vs_skinned.spv  vs_skybox.spv
src/: CMakeLists.txt  camera.cpp  engine.cpp  glad.c  material.cpp  mesh.cpp  model.cpp  program.cpp  scene.cpp  sence.cpp  skybox.cpp  texture.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp
